--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>GPA Calculator</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
     <body>
         <h1>Welcome to the GPA Calculator</h1>
