--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Welcome to the GPA Calculator</h1>
 
-        <img  src="UniMak-WEB.png" alt="CS LOGO" style="width: fit-content;" >
+        <img  src="UniMak-WEB.png" alt="CS LOGO" style="width: 100px;" >
 
         <form id="departmentForm">
             <label for="department">Select Your Department:</label>
