Update Computer Science Sem3.html

--- a/Computer Science Sem3.html
+++ b/Computer Science Sem3.html
@@ -7,7 +7,8 @@
     <title>CS GPA Calculator</title>
 </head>
 <body>
-    <h1>Calculate Your GPA</h1>
+    <h1>SEMESTER 3
+    </h1>
     <form id="Unimak Cumulative GPA">
         <label for="communication">Communication Skills Grade:</label>
         <select id="communication" name="courseGrade">
