Update Computer Science Sem5.html

--- a/Computer Science Sem5.html
+++ b/Computer Science Sem5.html
@@ -7,7 +7,7 @@
     <title>CS GPA Calculator</title>
 </head>
 <body>
-    <h1>Calculate Your GPA</h1>
+    <h1>SEMESTER 5</h1>
     <form id="Unimak Cumulative GPA">
         <label for="db1">Databases 1 Grade:</label>
         <select id="db1" name="courseGrade">
