Update Computer Science Sem6.html

--- a/Computer Science Sem6.html
+++ b/Computer Science Sem6.html
@@ -7,7 +7,7 @@
     <title>CS GPA Calculator</title>
 </head>
 <body>
-    <h1>Calculate Your GPA</h1>
+    <h1>SEMESTER 6</h1>
     <form id="Unimak Cumulative GPA">
         <label for="db2">Databases 2 Grade:</label>
         <select id="db2" name="courseGrade">
