--- a/Computer Science Sem7.html
+++ b/Computer Science Sem7.html
@@ -7,7 +7,7 @@
     <title>CS GPA Calculator</title>
 </head>
 <body>
-    <h1>Calculate Your GPA</h1>
+    <h1>SEMESTER 7</h1>
     <form id="Unimak Cumulative GPA">
         <label for="aw">Academic Writing Grade:</label>
         <select id="aw" name="courseGrade">
