--- a/Computer Science Sem8.html
+++ b/Computer Science Sem8.html
@@ -7,7 +7,7 @@
     <title>CS GPA Calculator</title>
 </head>
 <body>
-    <h1>Calculate Your GPA</h1>
+    <h1>SEMESTER 8</h1>
     <form id="Unimak Cumulative GPA">
         <label for="networking">Computer Network and Security Grade:</label>
         <select id="networking" name="courseGrade">
