--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
     <body>
         <h1>Welcome to the GPA Calculator</h1>
+        <div class="wrapper">
+  <span>W</span>
+  <span>E</span>
+  <span>L</span>
+  <span>C</span>
+  <span>O</span>
+  <span>M</span>
+  <span>E</span>
+</div>
 
         <img  src="UniMak-WEB.png" alt="UniMak LOGO" style="width: 420px;" >
 
