Update Computer Science Sem1.html

--- a/Computer Science Sem1.html
+++ b/Computer Science Sem1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="forms Style.css">
     <script src="Pages_script.js"></script>
@@ -304,6 +305,7 @@
             </select><br>
             <p id="resultSEM2"></p>
             <button type="button" onclick="calculateGPA2()">Calculate GPA for SEMESTER 2</button>
+            <canvas id="gpaChart" width="400" height="200"></canvas>
 
     </form>
 
