--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
 
         <form id="departmentForm">
-            <img  src="UniMak-WEB.png" alt="UniMak LOGO" style="width: 420px;" >
+            <img  src="UniMak-WEB.png" alt="UniMak LOGO" style="width: 100%;" >
             <label for="department">Select Your Department:</label>
                 <select id="department" name="department">
 
