--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <button type="button" onclick="loadSemesterPage()">Submit</button>
             
         </form>
-  <h6>Powered By SawTech</h6>
+  <h6>Powered By CyberNex</h6>
 <img  src="SawTech.png" alt="CS LOGO" style="width: 220px;" >
 
     <script>
