Update Computer Science Sem1.html

--- a/Computer Science Sem1.html
+++ b/Computer Science Sem1.html
@@ -161,6 +161,7 @@
     </form>
 
     <form id="SEM2" style="display: none;">
+            <h1>SEMESTER 2</h1>
             <label for="communication2">Communication Skills Grade:</label>
             <select id="communication2" name="courseGrade">
                 <option value="">-- Select Grade --</option>
