Update Computer Science Sem1.html

--- a/Computer Science Sem1.html
+++ b/Computer Science Sem1.html
@@ -157,7 +157,7 @@
         </select><br>
         <p id="result"></p>
         <button type="button" onclick="calculateGPA()">Calculate GPA for SEMESTER 1</button>
-        <button type="button" onclick="document.getElementById('SEM2').style.display='block'; this.style.display='none';">Add Another Semester</button>
+        <button type="button" onclick="document.getElementById('SEM2').style.display='block'; this.style.display='none';">Add Semester Two</button>
     </form>
 
     <form id="SEM2" style="display: none;">
